--- a/app/styles.css
+++ b/app/styles.css
@@ -15,18 +15,23 @@
   width: 10%;
 } */
 .flip-card {
+  border-radius: 10%;
   background-color: transparent;
   width: 300px;
-  height: 200px;
+  margin-right: 0px;
+  padding-right: 0px;
+  /* height: 200px; */
   border: 1px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
 /* This container is needed to position the front and back side */
 .flip-card-inner {
+  border-radius: 10%;
+
   position: relative;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -39,9 +44,10 @@
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
+  border-radius: 10%;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   backface-visibility: hidden;
 }
 
@@ -49,10 +55,16 @@
 .flip-card-front {
   color: black;
 }
-
+.cardback {
+  border-radius: 10%;
+}
 /* Style the back side */
 .flip-card-back {
   color: white;
+  background-color: white;
+  height: 100%;
   transform: rotateY(180deg);
 }
+
+
 
