--- a/app/styles.css
+++ b/app/styles.css
@@ -10,10 +10,10 @@
   }
 }
 
-/* .fixed {
+.fixed {
+  top: -25vw;
   right: 10vw;
-  width: 10%;
-} */
+}
 .flip-card {
   border-radius: 10%;
   background-color: transparent;
@@ -28,10 +28,7 @@
 /* This container is needed to position the front and back side */
 .flip-card-inner {
   border-radius: 10%;
-
   position: relative;
-  /* width: 100%; */
-  /* height: 100%; */
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
@@ -66,5 +63,8 @@
   transform: rotateY(180deg);
 }
 
+/* .fixed div{
+  width: auto !important;
+} */
 
 
