--- a/app/styles.css
+++ b/app/styles.css
@@ -11,7 +11,7 @@
 }
 
 .fixed {
-  top: -25vw;
+  top: -35vw;
   right: 10vw;
 }
 .flip-card {
@@ -35,9 +35,9 @@
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
+/* .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
-}
+} */
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
